--- a/servidor_minecraft/server.properties
+++ b/servidor_minecraft/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Wed May 14 23:22:31 UTC 2025
+#Wed May 14 23:42:40 UTC 2025
 allow-flight=false
 allow-nether=true
 broadcast-console-to-ops=true
@@ -35,7 +35,7 @@ online-mode=false
 op-permission-level=4
 player-idle-timeout=0
 prevent-proxy-connections=false
-pvp=true
+pvp=false
 query.port=25565
 rate-limit=0
 rcon.password=
